homework1/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: simple-server-app
  template:
    metadata:
      labels:
        app: simple-server-app
    spec:
      containers:
      - name: serverbox
        image: msergei/simple-server:v2
        ports:
          - name: web
            containerPort: 5000
        livenessProbe:
          httpGet:
            port: 5000
            path: /health
          initialDelaySeconds: 10
          periodSeconds: 5
          timeoutSeconds: 2
        readinessProbe:
          httpGet:
            port: 5000
            path: /health
          initialDelaySeconds: 10
          periodSeconds: 5
