homework1/service.yml
apiVersion: v1
kind: Service
metadata:
  name: simple-service
spec:
  selector:
    app: simple-server-app
  ports:
    - protocol: TCP
      port: 8000
      targetPort: web
  type: NodePort
